<?xml version="1.0"?>
<package format="2">
  <name>db_alpha_controllers</name>
  <version>0.0.0</version>
  <description>ROS-Dynamixel interface for position and torque controllers of the Dung Beetle robot</description>
  <maintainer email="cavie17@student.sdu.dk">ros</maintainer>
  <!--<scribe email="matt_haltermann@todo.todo">ros</scribe>-->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
</package>
